WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163941
[SOUP] Network process assertion in NetworkDataTask::continueHTTPRedirection
https://bugs.webkit.org/show_bug.cgi?id=163941
Summary
[SOUP] Network process assertion in NetworkDataTask::continueHTTPRedirection
Michael Catanzaro
Reported
2016-10-25 06:45:50 PDT
The network process is crashing very often in NetworkDataTask::continueHTTPRedirection. Try loading e.g.
http://youtube.com
(not https, so that you get redirected to https): ASSERTION FAILED: toASCIILowerUnchecked(*letter) == *letter ../../Source/WTF/wtf/text/StringCommon.h(609) : bool WTF::hasPrefixWithLettersIgnoringASCIICaseCommon(const StringClass&, const char*, unsigned int) [with StringClass = WTF::StringImpl] 1 0x7fb77a269c56 /home/mcatanzaro/src/jhbuild/install/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7fb77a269c56] 2 0x7fb780468b0b /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF43hasPrefixWithLettersIgnoringASCIICaseCommonINS_10StringImplEEEbRKT_PKcj+0x9c) [0x7fb780468b0b] 3 0x7fb7804673ec /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF48equalLettersIgnoringASCIICaseCommonWithoutLengthINS_10StringImplEEEbRKT_PKc+0x51) [0x7fb7804673ec] 4 0x7fb7805bd369 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF35equalLettersIgnoringASCIICaseCommonINS_10StringImplELj4EEEbRKT_RAT0__Kc+0x61) [0x7fb7805bd369] 5 0x7fb7805bcb43 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF29equalLettersIgnoringASCIICaseILj4EEEbRKNS_10StringImplERAT__Kc+0x23) [0x7fb7805bcb43] 6 0x7fb7805bbc93 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF29equalLettersIgnoringASCIICaseILj4EEEbPKNS_10StringImplERAT__Kc+0x2a) [0x7fb7805bbc93] 7 0x7fb7805bab8e /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF29equalLettersIgnoringASCIICaseILj4EEEbRKNS_6StringERAT__Kc+0x2e) [0x7fb7805bab8e] 8 0x7fb7805b48bf /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit15NetworkDataTask23continueHTTPRedirectionEv+0x313) [0x7fb7805b48bf] 9 0x7fb7805b410a /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit15NetworkDataTask38didFinishSkipInputStreamForRedirectionEv+0x3c) [0x7fb7805b410a] 10 0x7fb7805b3f73 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit15NetworkDataTask37skipInputStreamForRedirectionCallbackEP13_GInputStreamP13_GAsyncResultPS0_+0x1c1) [0x7fb7805b3f73] 11 0x7fb772b1c54c /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(+0x7254c) [0x7fb772b1c54c] 12 0x7fb772b55201 /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(+0xab201) [0x7fb772b55201] 13 0x7fb772b5531d /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(+0xab31d) [0x7fb772b5531d] 14 0x7fb772b55d6a /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(g_task_return_int+0x5a) [0x7fb772b55d6a] 15 0x7fb772b1e421 /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(+0x74421) [0x7fb772b1e421] 16 0x7fb772b55201 /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(+0xab201) [0x7fb772b55201] 17 0x7fb772b5525e /home/mcatanzaro/src/jhbuild/install/lib/libgio-2.0.so.0(+0xab25e) [0x7fb772b5525e] 18 0x7fb77237acf5 /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(+0x56cf5) [0x7fb77237acf5] 19 0x7fb7723782b5 /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(+0x542b5) [0x7fb7723782b5] 20 0x7fb772379137 /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(g_main_context_dispatch+0x33) [0x7fb772379137] 21 0x7fb77237931b /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(+0x5531b) [0x7fb77237931b] 22 0x7fb772379741 /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(g_main_loop_run+0x1d5) [0x7fb772379741] 23 0x7fb77a2cf394 /home/mcatanzaro/src/jhbuild/install/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop3runEv+0xac) [0x7fb77a2cf394] 24 0x7fb7805be16c /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit16ChildProcessMainINS_14NetworkProcessENS_20ChildProcessMainBaseEEEiiPPc+0x87) [0x7fb7805be16c] 25 0x7fb7805be0d3 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(NetworkProcessMainUnix+0x20) [0x7fb7805be0d3] 26 0x400c2a /home/mcatanzaro/src/jhbuild/install/libexec/webkit2gtk-4.0/WebKitNetworkProcess(main+0x34) [0x400c2a] 27 0x7fb76d33e731 /lib64/libc.so.6(__libc_start_main+0xf1) [0x7fb76d33e731] 28 0x400b29 /home/mcatanzaro/src/jhbuild/install/libexec/webkit2gtk-4.0/WebKitNetworkProcess(_start+0x29) [0x400b29]
Attachments
Patch
(1.84 KB, patch)
2016-10-25 09:01 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-10-25 09:01:52 PDT
Created
attachment 292760
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-25 16:45:33 PDT
Comment on
attachment 292760
[details]
Patch Clearing flags on attachment: 292760 Committed
r207856
: <
http://trac.webkit.org/changeset/207856
>
WebKit Commit Bot
Comment 3
2016-10-25 16:45:36 PDT
All reviewed patches have been landed. Closing bug.
Jaehun Lim
Comment 4
2016-10-26 01:11:52 PDT
***
Bug 163936
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug