[SOUP] Network process assertion in NetworkDataTask::continueHTTPRedirection https://bugs.webkit.org/show_bug.cgi?id=163941

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2016-10-25
Reviewed by Michael Catanzaro.

equalLettersIgnoringASCIICase() expects the second argument to be the letters to compare in lowercase, so use
"get" instead of "GET".

* NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::continueHTTPRedirection):

Canonical link: https://commits.webkit.org/181713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207856 268f45cc-cd09-0410-ab3c-d52691b4dbfc